--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,400 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  background-color: #f5f5f5;
 }
 
-.App-logo {
-  height: 40vmin;
+/* navbar styles */
+.nav-bar-wrapper {
+  width: 100vw;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav-bar {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  height: 100px;
+  background-color: #4cb69f;
+  box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.39);
+}
+
+.left-side-nav-bar {
+  margin-top: 30px;
+  margin-left: 30px;
+  padding: 10px;
+}
+
+.left-side-nav-bar a {
+  text-decoration: none;
   color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.left-side-nav-bar a:hover {
+  color: #201d3a;
+}
+
+.center-nav-bar {
+  margin-top: 30px;
+  padding: 10px;
+}
+
+.search-bar {
+  height: 30px;
+  width: 40vw;
+  outline-color: #4cb69f;
+  border-radius: 5px;
+}
+
+.right-side-nav-bar {
+  margin-top: 30px;
+  margin-right: 30px;
+  padding: 10px;
+}
+
+.right-side-nav-bar a {
+  text-decoration: none;
+  color: white;
+}
+
+.right-side-nav-bar a:hover {
+  color: #201d3a;
+}
+
+.sign-out-btn {
+  background-color: transparent;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 1em;
+}
+
+.sign-out-btn:hover {
+  color: #201d3a;
+}
+
+/* home page styles */
+.links-wrapper {
+  padding: 50px;
+  margin-top: 60px;
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
+}
+
+.leave-rating {
+  padding: 20px 0px;
+  border-radius: 10px;
+  width: 25vw;
+  text-align: center;
+  background-color: #4cb69f;
+  box-shadow: 11px 10px 21px 0px rgba(0, 0, 0, 0.39);
+}
+
+.leave-rating a {
+  text-decoration: none;
+  color: white;
+}
+
+.leave-rating a:hover {
+  color: #201d3a;
+}
+
+.see-top-rated {
+  padding: 20px 0px;
+  border-radius: 10px;
+  width: 25vw;
+  text-align: center;
+  background-color: #4cb69f;
+  box-shadow: 11px 10px 21px 0px rgba(0, 0, 0, 0.39);
+}
+
+.see-top-rated a {
+  text-decoration: none;
+  color: white;
+}
+
+.see-top-rated a:hover {
+  color: #201d3a;
+}
+
+.body-text {
+  text-align: center;
+}
+
+.sign-up-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.sign-up-grid {
+  display: grid;
+  border-radius: 10px;
+  padding: 25px 50px;
+  margin: 30px 0px 100px 0px;
+  background-color: lightgray;
+  box-shadow: 11px 10px 21px 0px rgba(0, 0, 0, 0.39);
+}
+
+.home-page-grid-two-column {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+}
+
+.home-page-name {
+  height: 35px;
+  width: 200px;
+  outline-color: #4cb69f;
+}
+
+.home-page-email {
+  height: 35px;
+  outline-color: #4cb69f;
+}
+
+.sign-up-btn {
+  cursor: pointer;
+  margin-top: 15px;
+  width: 80px;
+  height: 25px;
+  border-radius: 5px;
+  background-color: #201d3a;
+  color: white;
+  outline-color: #4cb69f;
+}
+
+.sign-up-btn:hover {
+  background-color: #4a4583;
+}
+
+/* login page styles */
+.login-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+  text-align: center;
+}
+/* .login-page {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 50px 0px 100px 0px;
+}
+
+.form-wrapper {
+  display: grid;
+  border-radius: 5px;
+  padding: 25px 50px;
+  background-color: lightgray;
+  box-shadow: 11px 10px 21px 0px rgba(0, 0, 0, 0.39);
+}
+
+.left-side-header {
+  text-align: center;
+  font-size: 2em;
+  margin: 10px 0px 25px 0px;
+}
+
+.grid-wrapper {
+  display: grid;
+}
+
+.two-column {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+  height: 35px;
+}
+
+.one-column {
+  display: grid;
+  grid-template-columns: 1fr;
+  height: 35px;
+}
+
+.sign-up-input {
+  outline-color: #4cb69f;
+}
+
+.right-side-header {
+  text-align: center;
+  font-size: 2em;
+  margin: 10px 0px 25px 0px;
+}
+
+.login-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.input-box {
+  height: 35px;
+  width: 250px;
+  outline-color: #4cb69f;
+}
+
+.btn {
+  width: 80px;
+  height: 25px;
+  border-radius: 5px;
+  margin-top: 20px;
+  background-color: #393565;
+  color: white;
+  outline-color: #4cb69f;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #4a4583;
+}
+
+.error-text {
+  color: firebrick;
+  text-align: center;
+  font-weight: 500;
+} */
+
+/* leave a rating page styles */
+.link-to-see-realtors {
+  display: flex;
+  justify-content: flex-end;
+  margin: 20px;
+  text-decoration: none;
+  color: black;
+}
+
+.link-to-see-realtors:hover {
+  color: #4cb69f;
+}
+
+.leave-rating-wrapper {
+  margin: 10px 0px 100px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.leave-rating-header {
+  font-size: 1.5em;
+  text-align: center;
+  font-weight: 500;
+}
+
+.leave-rating-container {
+  background-color: lightgray;
+  border-radius: 5px;
+  display: grid;
+  padding: 25px 50px;
+  box-shadow: 11px 10px 21px 0px rgba(0, 0, 0, 0.39);
+}
+
+.leave-rating-two-column {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-gap: 10px;
+}
+
+.leave-rating-realtor-name {
+  height: 35px;
+  outline-color: #4cb69f;
+}
+
+.leave-rating-realtor-rating {
+  height: 40px;
+  background-color: white;
+  outline-color: #4cb69f;
+}
+
+.leave-rating-one-column {
+  display: grid;
+  height: 35px;
+}
+
+.btn-leave-rating {
+  width: 80px;
+  height: 25px;
+  border-radius: 5px;
+  margin-top: 90px;
+  background-color: #201d3a;
+  color: white;
+  outline-color: #4cb69f;
+  cursor: pointer;
+}
+
+.btn-leave-rating:hover {
+  background-color: #4a4583;
+}
+
+.review-block {
+  height: 100px;
+  outline-color: #4cb69f;
+}
+
+/* top rated page styles */
+/* .top-rated-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  justify-content: center;
+  margin: 70px;
+}
+
+.top-rated-pic {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  height: 200px;
+  width: 200px;
+  background-repeat: no-repeat;
+  margin: 10px 30px 10px 0px;
+}
+
+.top-rated-info-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.top-rated-name-location {
+  font-size: 1.5em;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+.top-rated-rating {
+  margin-bottom: 20px;
+}
+
+.top-rated-link a {
+  color: black;
+  text-decoration: none;
+}
+
+.top-rated-link a:hover {
+  color: #4cb69f;
+}
+
+.search {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+#search-bar {
+  width: 100%;
+  height: 30px;
+  font-size: 1em;
+  outline-color: #4cb69f;
+  border: none;
+  box-shadow: 10px 10px 31px -1px rgba(0, 0, 0, 0.42);
+} */
+
+.top-rated-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
 }
