--- a/src/App.css
+++ b/src/App.css
@@ -334,11 +334,13 @@ body {
 }
 
 /* top rated page styles */
-/* .top-rated-container {
+.top-rated-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   justify-content: center;
   margin: 70px;
+  border: 1px solid black;
+  border-radius: 5px;
 }
 
 .top-rated-pic {
@@ -349,7 +351,7 @@ body {
   height: 200px;
   width: 200px;
   background-repeat: no-repeat;
-  margin: 10px 30px 10px 0px;
+  margin: 30px;
 }
 
 .top-rated-info-container {
@@ -361,12 +363,18 @@ body {
 .top-rated-name-location {
   font-size: 1.5em;
   margin-top: 30px;
+  /* margin-bottom: 20px; */
+}
+
+.top-rated-brokerage {
+  font-size: 1em;
+  margin-top: 10px;
   margin-bottom: 20px;
 }
 
-.top-rated-rating {
+/* .top-rated-rating {
   margin-bottom: 20px;
-}
+} */
 
 .top-rated-link a {
   color: black;
@@ -390,7 +398,7 @@ body {
   outline-color: #4cb69f;
   border: none;
   box-shadow: 10px 10px 31px -1px rgba(0, 0, 0, 0.42);
-} */
+}
 
 .top-rated-text {
   display: flex;
