--- a/src/App.css
+++ b/src/App.css
@@ -7,18 +7,20 @@ body {
 .nav-bar-wrapper {
   width: 100vw;
 }
+
 .nav-bar {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
   height: 100px;
   background-color: #4cb69f;
   box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.39);
 }
 
 .left-side-nav-bar {
-  margin-top: 30px;
   margin-left: 30px;
-  padding: 10px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .left-side-nav-bar a {
@@ -31,8 +33,9 @@ body {
 }
 
 .center-nav-bar {
-  margin-top: 30px;
-  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .search-bar {
@@ -43,9 +46,10 @@ body {
 }
 
 .right-side-nav-bar {
-  margin-top: 30px;
   margin-right: 30px;
-  padding: 10px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .right-side-nav-bar a {
@@ -79,6 +83,9 @@ body {
 }
 
 .leave-rating {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 20px 0px;
   border-radius: 10px;
   width: 25vw;
@@ -97,6 +104,9 @@ body {
 }
 
 .see-top-rated {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 20px 0px;
   border-radius: 10px;
   width: 25vw;
@@ -129,7 +139,7 @@ body {
   display: grid;
   border-radius: 10px;
   padding: 25px 50px;
-  margin: 30px 0px 100px 0px;
+  margin: 30px 10px 100px 10px;
   background-color: lightgray;
   box-shadow: 11px 10px 21px 0px rgba(0, 0, 0, 0.39);
 }
@@ -141,8 +151,12 @@ body {
 }
 
 .home-page-name {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   height: 35px;
-  width: 200px;
+  width: 30vw;
+  max-width: 200px;
   outline-color: #4cb69f;
 }
 
@@ -362,21 +376,26 @@ body {
 
 .top-rated-name-location {
   font-size: 1.5em;
-  margin-top: 30px;
-  /* margin-bottom: 20px; */
+  margin-top: 20px;
+  margin-left: 30px;
 }
 
 .top-rated-brokerage {
   font-size: 1em;
   margin-top: 10px;
   margin-bottom: 20px;
+  margin-left: 30px;
 }
 
-/* .top-rated-rating {
-  margin-bottom: 20px;
-} */
+.top-rated-rating {
+  margin-left: 30px;
+}
 
-.top-rated-link a {
+p {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+/* .top-rated-link a {
   color: black;
   text-decoration: none;
 }
@@ -398,7 +417,7 @@ body {
   outline-color: #4cb69f;
   border: none;
   box-shadow: 10px 10px 31px -1px rgba(0, 0, 0, 0.42);
-}
+} */
 
 .top-rated-text {
   display: flex;
