--- a/src/App.css
+++ b/src/App.css
@@ -186,7 +186,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 100px;
+  margin: 100px 15px;
   text-align: center;
 }
 /* .login-page {
@@ -303,6 +303,7 @@ body {
   display: grid;
   padding: 25px 50px;
   box-shadow: 11px 10px 21px 0px rgba(0, 0, 0, 0.39);
+  margin: 20px;
 }
 
 .leave-rating-two-column {
