--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,21 @@
 body {
   margin: 0;
+  display: flex;
+  flex-direction: column;
   background-color: #f5f5f5;
 }
 
 /* navbar styles */
 .nav-bar-wrapper {
   width: 100vw;
+  position: relative;
 }
 
 .nav-bar {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
   height: 100px;
-  background-color: #4cb69f;
-  box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.39);
+  background-color: darkblue;
 }
 
 .left-side-nav-bar {
@@ -28,10 +30,6 @@ body {
   color: white;
 }
 
-.left-side-nav-bar a:hover {
-  color: #201d3a;
-}
-
 .center-nav-bar {
   display: flex;
   justify-content: center;
@@ -41,7 +39,6 @@ body {
 .search-bar {
   height: 30px;
   width: 40vw;
-  outline-color: #4cb69f;
   border-radius: 5px;
 }
 
@@ -57,10 +54,6 @@ body {
   color: white;
 }
 
-.right-side-nav-bar a:hover {
-  color: #201d3a;
-}
-
 .sign-out-btn {
   background-color: transparent;
   color: white;
@@ -73,10 +66,47 @@ body {
   color: #201d3a;
 }
 
+/* footer styles */
+.footer-container {
+  position: relative;
+  height: 100px;
+  bottom: 0px;
+  background-color: darkblue;
+}
+
+.home-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.home-link a {
+  text-decoration: none;
+  margin-top: 30px;
+  color: white;
+}
+
 /* home page styles */
+.heading-text {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 30px 15px 0px 15px;
+  font-size: 1.5em;
+  text-align: center;
+  font-weight: 500;
+}
+
+.authentic {
+  font-weight: 700;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
 .links-wrapper {
   padding: 50px;
-  margin-top: 60px;
+  margin-top: 0px;
   display: flex;
   justify-content: space-around;
   align-content: center;
@@ -90,17 +120,12 @@ body {
   border-radius: 10px;
   width: 25vw;
   text-align: center;
-  background-color: #4cb69f;
-  box-shadow: 11px 10px 21px 0px rgba(0, 0, 0, 0.39);
+  background-color: darkblue;
 }
 
 .leave-rating a {
   text-decoration: none;
   color: white;
-}
-
-.leave-rating a:hover {
-  color: #201d3a;
 }
 
 .see-top-rated {
@@ -111,8 +136,7 @@ body {
   border-radius: 10px;
   width: 25vw;
   text-align: center;
-  background-color: #4cb69f;
-  box-shadow: 11px 10px 21px 0px rgba(0, 0, 0, 0.39);
+  background-color: darkblue;
 }
 
 .see-top-rated a {
@@ -120,12 +144,10 @@ body {
   color: white;
 }
 
-.see-top-rated a:hover {
-  color: #201d3a;
-}
-
 .body-text {
   text-align: center;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .sign-up-form {
@@ -141,7 +163,6 @@ body {
   padding: 25px 50px;
   margin: 30px 10px 100px 10px;
   background-color: lightgray;
-  box-shadow: 11px 10px 21px 0px rgba(0, 0, 0, 0.39);
 }
 
 .home-page-grid-two-column {
@@ -157,12 +178,10 @@ body {
   height: 35px;
   width: 30vw;
   max-width: 200px;
-  outline-color: #4cb69f;
 }
 
 .home-page-email {
   height: 35px;
-  outline-color: #4cb69f;
 }
 
 .sign-up-btn {
@@ -173,7 +192,6 @@ body {
   border-radius: 5px;
   background-color: #201d3a;
   color: white;
-  outline-color: #4cb69f;
 }
 
 .sign-up-btn:hover {
@@ -189,6 +207,7 @@ body {
   margin: 100px 15px;
   text-align: center;
 }
+
 /* .login-page {
   display: flex;
   flex-wrap: wrap;
@@ -280,7 +299,7 @@ body {
 }
 
 .link-to-see-realtors:hover {
-  color: #4cb69f;
+  color: darkblue;
 }
 
 .leave-rating-wrapper {
@@ -302,7 +321,6 @@ body {
   border-radius: 5px;
   display: grid;
   padding: 25px 50px;
-  box-shadow: 11px 10px 21px 0px rgba(0, 0, 0, 0.39);
   margin: 20px;
 }
 
@@ -314,13 +332,11 @@ body {
 
 .leave-rating-realtor-name {
   height: 35px;
-  outline-color: #4cb69f;
 }
 
 .leave-rating-realtor-rating {
   height: 40px;
   background-color: white;
-  outline-color: #4cb69f;
 }
 
 .leave-rating-one-column {
@@ -335,7 +351,6 @@ body {
   margin-top: 90px;
   background-color: #201d3a;
   color: white;
-  outline-color: #4cb69f;
   cursor: pointer;
 }
 
@@ -345,7 +360,6 @@ body {
 
 .review-block {
   height: 100px;
-  outline-color: #4cb69f;
 }
 
 /* top rated page styles */
@@ -424,5 +438,5 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 100px;
+  margin-top: 150px;
 }
